--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,14 +1,15 @@
-
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
-// Variables
-@import 'variables';
-
+// // Fonts
+// @import url('https://fonts.googleapis.com/css?family=Nunito');
+// // Variables
+// @import 'variables';
+//icons
+//icons
+@import url("http://code.ionicframework.com/ionicons/2.0.0/css/ionicons.min.css");
+@import url("https://use.fontawesome.com/releases/v5.2.0/css/all.css");
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
-
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
+@import '~bootstrap/dist/css/bootstrap.min.css';
+//admin-lte
+@import 'AdminLTE.css';
+@import 'skin-black2.min.css';
+//datatables responsive
+@import url("https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css");
